{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 293,
  "lineage": "3fb1e8e3-bd1f-4de1-519c-3856b200b468",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "o",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0646e8f179eeef52d",
            "associate_with_private_ip": "10.0.1.34",
            "association_id": "eipassoc-0a7e22d1a4a6a39bf",
            "domain": "vpc",
            "id": "eipalloc-0646e8f179eeef52d",
            "instance": "i-057d6aa2494d7c1b2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05b74ba2a0c8d92c8",
            "private_dns": "ip-10-0-1-34.ec2.internal",
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-34-224-234-42.compute-1.amazonaws.com",
            "public_ip": "34.224.234.42",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0729e439b6769d6ab",
            "arn": "arn:aws:ec2:us-east-1:123780119162:instance/i-057d6aa2494d7c1b2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057d6aa2494d7c1b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vprofile",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-05b74ba2a0c8d92c8"
              }
            ],
            "primary_network_interface_id": "eni-05b74ba2a0c8d92c8",
            "private_dns": "ip-10-0-1-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02435385c9a994ba7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bedc8fa0b52ad4cf",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0920ed0a6b0dc7899"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123780119162:internet-gateway/igw-0c4505ce6e9a445c8",
            "id": "igw-0c4505ce6e9a445c8",
            "owner_id": "123780119162",
            "vpc_id": "vpc-05331a59e75653286"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123780119162:network-interface/eni-05b74ba2a0c8d92c8",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f84245697fa9ed3e",
                "device_index": 0,
                "instance": "i-057d6aa2494d7c1b2"
              }
            ],
            "id": "eni-05b74ba2a0c8d92c8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:06:45:17:49:97",
            "owner_id": "123780119162",
            "private_ip": "10.0.1.34",
            "private_ip_list": [
              "10.0.1.34"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.34"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0920ed0a6b0dc7899"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bedc8fa0b52ad4cf"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123780119162:route-table/rtb-092e7be9b8ec7b74f",
            "id": "rtb-092e7be9b8ec7b74f",
            "owner_id": "123780119162",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4505ce6e9a445c8",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4505ce6e9a445c8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Igw"
            },
            "tags_all": {
              "Name": "Igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-05331a59e75653286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0219590f82b0b2971",
            "route_table_id": "rtb-092e7be9b8ec7b74f",
            "subnet_id": "subnet-0bedc8fa0b52ad4cf"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.table",
            "aws_subnet.public",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123780119162:security-group/sg-0920ed0a6b0dc7899",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0920ed0a6b0dc7899",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "123780119162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-05331a59e75653286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123780119162:subnet/subnet-0b1cc3033229c1f26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1cc3033229c1f26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123780119162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "vpc_id": "vpc-05331a59e75653286"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123780119162:subnet/subnet-0bedc8fa0b52ad4cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bedc8fa0b52ad4cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123780119162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-05331a59e75653286"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123780119162:vpc/vpc-05331a59e75653286",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a58873fe4ae16579",
            "default_route_table_id": "rtb-0f2eb50ec0349ee39",
            "default_security_group_id": "sg-01d2dfc81d8feb1f7",
            "dhcp_options_id": "dopt-029b35e1247773345",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05331a59e75653286",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2eb50ec0349ee39",
            "owner_id": "123780119162",
            "tags": {
              "Name": "proj-vpc"
            },
            "tags_all": {
              "Name": "proj-vpc"
            }
          }
        }
      ]
    }
  ]
}